[NetworkChangeNotifier] Run Windows connection type computation on safe thread

1. Move RecomputeCurrentConnectionType to anonymous namespace
2. Call RecomputeCurrentConnectionType via callback so tests can override
3. Call RecomputeCurrentConnectionType on dns thread
4. Tests inject their own dns task runner

BUG=721461,725487

Review-Url: https://codereview.chromium.org/2893943002
Cr-Commit-Position: refs/heads/master@{#475082}